--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "dependencies": {
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
+        "ethers": "^6.13.5",
         "express": "^4.21.2",
-        "mongoose": "^8.9.7"
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.9.7",
+        "siwe": "^3.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
