--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
+    "check": "npm run lint && npm run format:check",
     "dev": "nodemon src/server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . -- --fix",
