--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "check": "npm run lint && npm run format:check",
+    "check": "npm run test && npm run lint && npm run format:check",
     "dev": "nodemon src/server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . -- --fix",
     "format": "prettier --write . --ignore-path .gitignore",
     "format:check": "prettier --check . --ignore-path .gitignore",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles",
-    "test:watch": "npm run test -- --watch"
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -27,12 +28,19 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.14.1",
+    "@vitest/coverage-v8": "^3.1.1",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.1.2",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.1"
   }
 }
