--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "lint:fix": "eslint . -- --fix",
     "format": "prettier --write . --ignore-path .gitignore",
     "format:check": "prettier --check . --ignore-path .gitignore",
-    "test": "vitest run",
-    "test:watch": "vitest watch",
-    "coverage": "vitest run --coverage"
+    "test": "NODE_OPTIONS='--experimental-vm-modules' vitest run --passWithNoTests",
+    "test:watch": "NODE_OPTIONS='--experimental-vm-modules' vitest watch",
+    "coverage": "NODE_OPTIONS='--experimental-vm-modules' vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -30,17 +30,13 @@
     "@eslint/js": "^9.19.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
-    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
-    "@vitest/coverage-v8": "^3.1.1",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.1.2",
     "globals": "^15.14.0",
-    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
-    "typescript": "^5.8.3",
-    "vitest": "^3.1.1"
+    "typescript": "^5.8.3"
   }
 }
