--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "check": "npm run lint && npm run format:check",
     "dev": "tsx watch src/server.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . -- --fix",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write . --ignore-path .gitignore",
     "format:check": "prettier --check . --ignore-path .gitignore"
   },
@@ -29,8 +29,14 @@
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.1.2",
+    "eslint-import-resolver-typescript": "^4.3.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-security": "^3.0.1",
     "globals": "^15.14.0",
     "prettier": "^3.5.3",
     "tsx": "^4.19.3",
